--- a/imagenes.html
+++ b/imagenes.html
@@ -30,11 +30,11 @@
 <body>
     <h1>Galería de Imágenes</h1>
     <div class="gallery">
-      <img src="https://img.freepik.com/vector-gratis/ilustracion-concepto-computo-escritorio-moderno_114360-12156.jpg" alt="Imagen 1">
-      <img src="https://cdn.pixcomp.com/uploads/media//image/117097272/desktop_d7912b88-eb83-4acd-9a1d-4536c65df78.png" alt="Imagen 2">
+      <img  src="/imagenes/descarga (1).jpg">
+      <img src="imagenes/images (1).jpg">
       <!-- cambiar el imagen -->
-      <img src="https://via.placeholder.com/200" alt="Imagen 3">
-      <img src="https://via.placeholder.com/200" alt="Imagen 4">
-      <img src="https://via.placeholder.com/200" alt="Imagen 5">
+      <img src="/imagenes/images (2).jpg" alt="Imagen 3">
+      <img src="/imagenes/images (3).jpg" alt="Imagen 4">
+      <img src="/imagenes/images.jpg alt="Imagen 5">
 </body>
 </html>
