--- a/imagenes.html
+++ b/imagenes.html
@@ -35,6 +35,6 @@
       <!-- cambiar el imagen -->
       <img src="/imagenes/images (2).jpg" alt="Imagen 3">
       <img src="/imagenes/images (3).jpg" alt="Imagen 4">
-      <img src="/imagenes/images.jpg alt="Imagen 5">
+      <img src="/imagenes/images.jpg "     alt="Imagen 5">
 </body>
 </html>
