--- a/tablas.html
+++ b/tablas.html
@@ -24,25 +24,33 @@
   </style>
 </head>
 <body>
-
-  <h1>Tabla de Datos</h1>
-  <table border="1">
-    <tr>
-      <th>Nombre</th>
-      <th>Edad</th>
-      <th>Ciudad</th>
-    </tr>
-    <tr>
-      <td>Ana</td>
-      <td>28</td>
-      <td>Cali</td>
-    </tr>
-    <tr>
-      <td>Carlos</td>
-      <td>34</td>
-      <td>Popayán</td>
-    </tr>
-  </table>
-
-</body>
+    <h1>Tabla de Datos</h1>
+    <table>
+      <tr>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>Ciudad</th>
+      </tr>
+      <tr>
+        <td>Ana</td>
+        <td>28</td>
+        <td>Cali</td>
+      </tr>
+      <tr>
+        <td>Carlos</td>
+        <td>34</td>
+        <td>Popayán</td>
+      </tr>
+      <tr>
+        <td>María</td>
+        <td>22</td>
+        <td>Armenia</td>
+      </tr>
+      <tr>
+        <td>Juan</td>
+        <td>40</td>
+        <td>Bogotá</td>
+      </tr>
+    </table>
+  </body>
 </html>
